...
                            .overlay(Image(systemName: "arrow.backward")
                                .foregroundColor(Color.primary)
                                .font(.title3), alignment: .center)
                            .frame(alignment: .leading)
                            .clipped()
                    }
                    .accessibilityIdentifier("Back")
                    .accessibilityHint(Text("Back"))
                    .hoverEffect(.highlight)
                    .padding()
                    Spacer()
                    Button {
                        contentViewModel.fetchData(repeatFetch: false)
...
